--- a/catandmouse_casestudy.html
+++ b/catandmouse_casestudy.html
@@ -55,16 +55,13 @@
          <section id="alt-features" class="module">
             <div class="container">
                <div class="row">
-                  <div class="col-sm-8 col-sm-offset-2">
-
-                      <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3">
-                        <h2 class="module-title font-alt text-center">CAT AND MOUSE GAMES</h2>
-                        <div class="module-subtitle font-serif text-center">
-                           Where everybody knows your name.
-                        </div>
-                      </div>
+                  <div class="col-sm-12 text-center">
+                     <h2 class="module-title font-alt">CAT AND MOUSE GAMES</h2>
+                     <div class="post-meta font-inc">
+                        Where everybody knows your name.
+                     </div>
                   </div>
+               </div>
                <!-- .row -->   
                <div class="row">
                      <!-- Alt features image start -->
