--- a/ciq_casestudy.html
+++ b/ciq_casestudy.html
@@ -67,11 +67,9 @@
 		<section id="alt-features" class="module">
 			<div class="container">
 				<div class="row">
-					<div class="col-sm-10 col-sm-offset-1">
-
-						<div class="row">
-						<h2 class="module-title font-alt text-center">CHANNEL IQ</h2>
-						<div class="module-subtitle font-serif text-center">
+					<div class="col-sm-12 text-center">
+						<h2 class="module-title font-alt">CHANNEL IQ</h2>
+						<div class="post-meta font-inc">
 							We know what you don't know.
 						</div>
 					</div>
