--- a/netflix_casestudy.html
+++ b/netflix_casestudy.html
@@ -56,11 +56,10 @@
             <div class="container">
                <div class="row">
                   <div class="col-sm-10 col-sm-offset-1">
-
-                      <div class="row">
-                        <div class="col-sm-6 col-sm-offset-3">
-                           <h2 class="module-title font-alt ">NETFLIX</h2>
-                           <div class="post-meta font-inc text-center">
+                     <div class="row">
+                        <div class="col-sm-12 text-center">
+                           <h2 class="module-title font-alt">NETFLIX</h2>
+                           <div class="post-meta font-inc">
                               Share what you love, with who you love.
                            </div>
                         </div>
