--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 <div class="hs-caption container">
                     <div class="caption-content">
                         <div class="hs-title-size-4 font-alt m-b-30 color-header">
-                            Hi, I'm Sara.
+                            HI, I'M SARA.
                         </div>
-                        <div class="hs-title-size-3 font-inc">
+                        <div class="post-header hs-title-size-3">
                             I solve ux challenges and create intuitive design solutions.
                         </div>
                         <div class="hs-title-size-3 font-inc">
