new hero - more netflix wireframes

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
         <!-- WRAPPER -->
         <div class="wrapper">
             <!-- HOME -->
-            <section id="home" class="module-hero module-parallax module-fade bg-dark-30" data-background="assets/images/puertorico.png">
+            <section id="home" class="module-hero module-parallax module-fade bg-dark-30" data-background="assets/images/hero.JPG">
                 <div class="hs-caption container">
                     <div class="caption-content">
                         <div class="hs-title-size-4 font-alt m-b-30 color-header">
                             HI, I'M SARA.
                         </div>
                         <div class="post-header hs-title-size-3">
-                            I solve ux challenges and create intuitive design solutions.
+                            I solve ux challenges and create <br>intuitive design solutions.
                         </div>
                         <div class="hs-title-size-3 font-inc">
                             <a class="section-scroll mywork" href="#mywork">
